# ps1game

./: .gitignore  CMakeLists.txt  LEVEL_POLYGON_GUIDELINES.txt  convert_tris_to_quads.py  disc.xml  gen_collision.py  gen_conservatory_tex_map.py  gen_dresser_tex_map.py  gen_piano_room_tex_map.py  gen_reception_tex_map.py  gen_tex_map.py  git_details.txt  rebuild commands.txt  scale_smx.py  smd_ft3_to_ft4.py  smx_to_smd.py  subdivide_smx.py  system.cnf
assets/: Conservatory.smd  Conservatory.smx  Conservatory_mesh.smx  Conservatory_mesh_collision.c  Piano.blend  Piano.blend1  Piano_Room.smd  Piano_Room.smx  Piano_Room_mesh.smx  Piano_Room_mesh_collision.c  Piano_Room_mesh_collision.h  Reception.smd  Reception.smx  Reception_mesh.smx  Reception_mesh_collision.c  Reception_mesh_collision.h  delivery_area.smd  delivery_area_mesh.smx  delivery_area_mesh_collision.h  eight_cut_room.smd  eight_cut_room.smx  eight_cut_room_scaled.smx  kitchen_dining.smd  kitchen_dining.smx  kitchen_dining_mesh.smx  kitchen_dining_mesh_collision.c  level1.smd  level1.smx  level1_front_entrance.smx  level1_mesh.smx  level1_mesh_collision.c  level1_mesh_collision.h  new_scale_room.smd  new_scale_room.smx  room1.smd  room1.smx  smx_to_collision.py  testroom.smd  testroom.smx  testroom_4.smx  (+7 more)
assets/props/: Bookcase.smd  Bookcase.smx  Concrete Block.smd  Concrete Block.smx  Concrete Chair.smd  Concrete Chair.smx  Crucifaxe.smd  Crucifaxe.smx  Dining Table.smx  Door.smd  Door.smx  Dresser.smx  Fat_Door.smx  Grave-olver.smx  Piano.smd  Piano.smx  Save Point.smx  dining_table.smd  dresser.smd  fat_door.smd  grave-olver.smd  save_point.smd  wdcrate.smd  wdcrate.smx
blender models/: Bookcase.blend  Bookcase.blend1  Concrete Block.blend  Concrete Block.blend1  Concrete Chair.blend  Concrete Chair.blend1  Conservatory.blend  Conservatory.blend1  Conservatory_mesh.blend  Conservatory_mesh.blend1  Crucifaxe.blend  Crucifaxe.blend1  Crucifaxe_v2.blend  Dining Table.blend  Dining Table.blend1  Door.blend  Door.blend1  Dresser.blend  Dresser.blend1  Fat_Door.blend  Fat_Door.blend1  Grave-olver.blend  Grave-olver.blend1  Piano_Room.blend  Piano_Room.blend1  Piano_Room_mesh.blend  Piano_Room_mesh.blend1  Reception.blend  Reception.blend1  Reception_mesh.blend  Reception_mesh.blend1  Save Point.blend  Save Point.blend1  delivery_area.blend  delivery_area_mesh.mtl  eight_cut_room.blend  eight_cut_room.blend1  kitchen_dining.blend  kitchen_dining.blend1  kitchen_dining_mesh.blend  (+7 more)
music/: mp3_to_wav.py
sounds/: DIE.vag  ZOMBIEDIE.vag  axehit.vag  dogbark.vag  dogdie.vag  dropen.vag  gr_reload.vag  gr_shot.vag  hurt.vag  pickup.vag  smash.vag  swing.vag  tntcl_die.vag  tntcl_wrth.vag  unlock.vag  wav_to_vag.py  zombie.vag
src/: bat.c  bat.h  btn_glyph.c  btn_glyph.h  bullet_hit.c  bullet_hit.h  camera.c  camera.h  cdaudio.c  cdaudio.h  collision.c  collision.h  concrete_props.c  concrete_props.h  conservatory.c  conservatory.h  conservatory_mesh_collision.c  conservatory_mesh_collision.h  conservatory_tex_map.h  copper_pot.c  copper_pot.h  crate.c  crate.h  crucifaxe.c  crucifaxe.h  delivery_area.c  delivery_area.h  delivery_area_mesh_collision.c  delivery_area_mesh_collision.h  delivery_area_tex_map.h  demondog.c  demondog.h  dining_table.c  dining_table.h  door.c  door.h  door_anim.c  door_anim.h  dresser.c  dresser.h  (+71 more)
textures/: bnnstr.tim  bookshelf.tim  brick_wall.tim  cncrte.tim  con_tile.tim  cppr_pt.tim  crucifaxe.tim  dbl_dr_hlf.tim  ddog_alert.tim  ddog_alert2.tim  ddog_sleep.tim  din_cl.tim  double_door.tim  dresser.tim  frnt_dr.tim  ghit.tim  gravel_texture.tim  graveolver.tim  grss.tim  inr_dbl_dr.tim  inr_dbl_dr_half.tim  kchn_tile.tim  kchn_wl.tim  key.tim  piano_keys.tim  png_to_tim.py  prpl_wlppr.tim  red_crpt.tim  red_wlppr.tim  rusty_fence.tim  shadow.tim  sml_med.tim  stn_gls.tim  stn_stl.tim  stnd_rnds.tim  stove.tim  strs.tim  tntcl_actv.tim  tntcl_idle.tim  trees.tim  (+8 more)
tools/: AREAS_AND_WORLD_NOTES.txt  MESH_CONVERSION_NOTES.txt  TEXTURE_STREAMING_DEBUG.txt  TEXTURING_NOTES.txt  VRAM_MAP.txt  io_export_smx_v3.py  preview_4bpp.py  vram_map.py
